--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 	<p>Sinta-se à vontade para entrar em contato:</p>
 	<ul class="contact">
 		<li class="icon solid fa-envelope"><a href="#">guilhermefariarosa@gmail.com</a></li>
-		<li class="icon brands fa-linkedin"><a href="www.linkedin.com/in/guilherme-de-faria-rosa-9b2aba235">LinkedIn</a></li>
+		<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/guilherme-de-faria-rosa-9b2aba235">LinkedIn</a></li>
 		</ul>
 </section>
 
